# llvm-hs-jit-external-lib

./: .gitignore  Makefile  README.md  lib.c  llvm-hs-jit-external-lib.cabal  module.ll  stack.yaml
src/: Dynamic.hs  Static.hs
