name:                llvm-hs-jit-external-lib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/llvm-hs-jit-external-lib#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Unknown
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dynamic
  hs-source-dirs:      src
  main-is:             Dynamic.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , llvm-hs
                     , llvm-hs-pure
  extra-libraries:     externaldynamic
  extra-lib-dirs:      .

executable static
  hs-source-dirs:      src
  main-is:             Static.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , llvm-hs
                     , llvm-hs-pure
  extra-lib-dirs:      .
  ld-options:          -rdynamic -Wl,--whole-archive,-lexternalstatic,--no-whole-archive
